@@ -1,6 +1,9 @@
 Changes between 1.0.x and 'trunk'
 =====================================
 
+* fix a funcarg cached_setup bug probably only occuring 
+  in distributed testing and "module" scope with teardown. 
+
 * consolidate builtins implementation to be compatible with >=2.3, 
   add helpers to ease keeping 2 and 3k compatible code
 
